Skip tests from r48987 without ICU

--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -1754,9 +1754,9 @@ CONFIGURE_TEST_FILES = \
     t/configure/*.t \
     t/steps/*.t
 PBC_TEST_FILES = \
+#IF(has_icu):    t/op/testlib/test_strings.pbc \
     t/pmc/testlib/annotations.pbc \
-    t/pmc/testlib/number.pbc \
-    t/op/testlib/test_strings.pbc
+    t/pmc/testlib/number.pbc
 
 # pbc files used for several tests
 pbctestfiles: $(PARROT) $(PBC_TEST_FILES)
